--- a/Wiki/SNES/Robotrek/Credits.wikitext
+++ b/Wiki/SNES/Robotrek/Credits.wikitext
@@ -164,12 +164,12 @@ Robotrek was Quintet's only RPG with a modern/sci-fi setting. The game:
 
 == Internal ROM Credits ==
 
-Found in ROM at $ff:FFE0:
+Found in ROM header at $ff:ffe0:
 
 <pre>
 ROBOTREK 1 USA
 1994 ENIX/QUINTET
 </pre>
 
+[[Category:Robotrek]]
 [[Category:Credits]]
-[[Category:SNES]]
